| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 1.6
	- Version 1.6.0

Developer Version
	- 1.6.0 Development
	- 1.6.0 Stable

Building Steps: 3607



 Version 1.6.0 Stable
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: 

 - changed: 

 - added: Another view for the mediamanager. We can now disply the content of the media manager
          with a icon and new a list view.



 Version 1.6.0 Development
-----------------------------------------------------------------
 - bug #0000113: Fixed problem showing text at detail-view in gallery using K2-theme.
 - bug #0000171: Fixed the color chooser.
 - bug #0000182: Fixed the newsletter from field.
 - bug #0000186: Fixed the footer webpageowner link.
 - bug #0000189: Fixed the contactform problem, the contact mailaddress was not correctly decoded.
 - bug #0000187: Fixed the userlist problem in the backend user administration.
 - bug #0000177: Fixed the backslash problem with the site offline text.
 - bug #0000185: Fised the contactform problem with enabled seo and installed in the root folder.
 - bug #0000180: Fixed the encoding bug for the links in a newsletter.
 - bug #0000174: Fixed the encoding bug for the password retreavement mails.
 - bug #0000166: Fixed the pathway navigation.
 - bug #0000178: Fixed the "open dir" error on the documents list.
 - bug #0000168: Changed the blogfeatures (timeOfDay) to multilingual.
 - bug #0000184: Uploaded files cannot be greater then the php.ini setting.
 - bug #0000179: Image file in the mediamanager with a "ogg" or another multimedia file extension
                 are now correctly displayed as an image and not as the multimedia filetype.